--- a/test/src/main/webapp/WEB-INF/web.xml
+++ b/test/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>secure</filter-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
 	<listener>
 		<listener-class>time.TimeListener</listener-class>
@@ -33,10 +33,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
+
 </web-app>
