--- a/test/src/main/resources/log4j.properties
+++ b/test/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
 log4j.rootLogger = DEBUG, console
 log4j.appender.console = org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
-log4j.appdender.console.layout.ConversionPattern = %m%n
+log4j.appdender.console.layout.ConversionPattern = %m --- %l%n
