--- a/test/src/main/webapp/WEB-INF/web.xml
+++ b/test/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>secure</filter-name>
-		<url-pattern>*.do</url-pattern>
+		<url-pattern>/</url-pattern>
 	</filter-mapping>
 	<listener>
 		<listener-class>system.time.TimeListener</listener-class>
