--- a/test/pom.xml
+++ b/test/pom.xml
@@ -67,6 +67,11 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-core</artifactId>
+			<version>2.3.15.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>test</finalName>
