--- a/test/src/main/webapp/WEB-INF/web.xml
+++ b/test/src/main/webapp/WEB-INF/web.xml
@@ -3,39 +3,24 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-	<display-name>gd</display-name>
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml</param-value>
-	</context-param>
+
 	<filter>
-		<filter-name>secure</filter-name>
-		<filter-class>system.secure.SecurityFilter</filter-class>
+		<filter-name>struts</filter-name>
+		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
 	</filter>
 	<filter-mapping>
-		<filter-name>secure</filter-name>
-		<url-pattern>/</url-pattern>
+		<filter-name>struts</filter-name>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<listener>
-		<listener-class>system.time.TimeListener</listener-class>
-	</listener>
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	<servlet>
-		<servlet-name>dispatcher</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:dispatcher-servlet.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>dispatcher</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index</welcome-file>
-	</welcome-file-list>
+	<!-- <display-name>gd</display-name> <context-param> <param-name>contextConfigLocation</param-name> 
+		<param-value>classpath:applicationContext.xml</param-value> </context-param> 
+		<filter> <filter-name>secure</filter-name> <filter-class>system.secure.SecurityFilter</filter-class> 
+		</filter> <filter-mapping> <filter-name>secure</filter-name> <url-pattern>/</url-pattern> 
+		</filter-mapping> <listener> <listener-class>system.time.TimeListener</listener-class> 
+		</listener> <listener> <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> 
+		</listener> <servlet> <servlet-name>dispatcher</servlet-name> <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> 
+		<init-param> <param-name>contextConfigLocation</param-name> <param-value>classpath:dispatcher-servlet.xml</param-value> 
+		</init-param> <load-on-startup>1</load-on-startup> </servlet> <servlet-mapping> 
+		<servlet-name>dispatcher</servlet-name> <url-pattern>/</url-pattern> </servlet-mapping> 
+		<welcome-file-list> <welcome-file>index</welcome-file> </welcome-file-list> -->
 </web-app>
