--- a/test/pom.xml
+++ b/test/pom.xml
@@ -16,11 +16,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc7</artifactId>
-			<version>7.0.0</version>
+			<artifactId>ojdbc</artifactId>
+			<version>7.0</version>
 			<scope>runtime</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
