--- a/test/pom.xml
+++ b/test/pom.xml
@@ -16,7 +16,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc</artifactId>
+			<artifactId>jdbc</artifactId>
 			<version>7.0</version>
 			<scope>runtime</scope>
 		</dependency>
