--- a/test/src/main/webapp/WEB-INF/web.xml
+++ b/test/src/main/webapp/WEB-INF/web.xml
@@ -4,24 +4,25 @@
 
 <web-app>
 	<display-name>gd</display-name>
+	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
+	
 	<filter>
-		<filter-name>secure</filter-name>
-		<filter-class>system.secure.SecurityFilter</filter-class>
+		<filter-name>method</filter-name>
+		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
 	</filter>
 	<filter-mapping>
-		<filter-name>secure</filter-name>
-		<url-pattern>/</url-pattern>
+		<filter-name>method</filter-name>
+		<servlet-name>dispatcher</servlet-name>
 	</filter-mapping>
-	<listener>
-		<listener-class>system.time.TimeListener</listener-class>
-	</listener>
+	
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -35,7 +36,4 @@
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index</welcome-file>
-	</welcome-file-list>
 </web-app>
