--- a/test/pom.xml
+++ b/test/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>4.0.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>test</finalName>
