--- a/test/pom.xml
+++ b/test/pom.xml
@@ -103,6 +103,11 @@
 			<version>2.2.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>ssh</finalName>
