--- a/test/src/main/webapp/WEB-INF/web.xml
+++ b/test/src/main/webapp/WEB-INF/web.xml
@@ -13,8 +13,12 @@
 		<filter-name>method</filter-name>
 		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
 	</filter>
+	<filter>
+		<filter-name>b</filter-name>
+		<filter-class>test.B</filter-class>
+	</filter>
 	<filter-mapping>
-		<filter-name>method</filter-name>
+		<filter-name>b</filter-name>
 		<servlet-name>dispatcher</servlet-name>
 	</filter-mapping>
 
